# advent-of-code

./: .gitignore  _.py  entrypoint.py  pyproject.toml  requirements.txt  setup.py
2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2016/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2017/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  23.txt  24.py  25.py
2018/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  22.py  23.py  25.py
2019/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2020/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.1.py  1.2.py  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.1.py  2.2.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py
2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
aoc_runner/: entrypoint.py
aoc_utils/: __init__.py  pyproject.toml  utils.py
aocd_runner/: __init__.py  entrypoint.py  helper.py
utils/: aoc_utils.py  setup.py
