[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code>=0.1.0",
    "frozendict>=2.4.7",
    "tqdm>=4.67.1",
    "sympy>=1.14.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "regex>=2025.11.3",
    "advent-of-code-data>=2.1.1",
    "setuptools>=80.9.0",
    "portion>=2.6.1",
    "cpmpy>=0.9.28",
    "networkx>=3.6.1",
    "more-itertools>=10.8.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "types-networkx>=3.6.1.20251212",
    "types-shapely>=2.1.0.20250917",
    "types-tqdm>=4.67.0.20250809",
]

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "E741", # Ambiguous variable name (want to use "l" for line)
    "E731", # lambda assigning to a variable
    "INP001", # Implicit namespace package
    "D", # pydocstyle
    "CPY", # flake8-copyright
    "T20", # flake8-print
    "B905", # zip without explicit `strict=` parameter
    "PLR2004", # Magic value used in comparison
    "S101", # Use of assert detected
]

[project.entry-points."adventofcode.user"]
bernikr = "aocd_runner.entrypoint:solve"

[tool.mypy]
strict = true
local_partial_types = true
allow_redefinition = true
allow_redefinition_new = true
